[package]
name = "lndir"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2021"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
async-trait = "0.1.52"
cucumber = "0.12.0"
gherkin = "0.12.0"
regex = "1"
mktemp = "0.4.0"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
